# collisiondetection

./: .gitignore  CMakeLists.txt  CTCD.cpp  CTCD.h  Makefile  main.cpp  paths.mk
example/: AlecTest.cpp  Makefile  computeGap.cpp  displaceInward.cpp  testNewSequence.cpp  testSequence.cpp  testVelocityFilter.cpp
include/: CTCD.h  Distance.h  VelocityFilter.h
src/: AABBBroadPhase.cpp  AABBBroadPhase.h  ActiveLayers.cpp  ActiveLayers.h  CTCD.cpp  CTCD.cpp~  CTCDNarrowPhase.cpp  CTCDNarrowPhase.h  Distance.cpp  Distance.h  History.cpp  History.h  KDOPBroadPhase.cpp  KDOPBroadPhase.h  Mesh.cpp  Mesh.h  PenaltyGroup.cpp  PenaltyGroup.h  PenaltyPotential.cpp  PenaltyPotential.h  RetrospectiveDetection.h  SeparatingPlaneNarrowPhase.cpp  SeparatingPlaneNarrowPhase.h  SimulationState.h  Stencils.h  TrivialBroadPhase.cpp  TrivialBroadPhase.h  VelocityFilter.cpp  VelocityFilter.h  rpoly.h
